# qingpan-ai-storage-firewall

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  vite.desktop.config.ts
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
desktop/: DesktopApp.tsx  desktop.css  index.html  main.tsx
scripts/: build-desktop.mjs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: rendered-html.test.mjs
worker/: index.ts
