[package]
name = "qingpan-desktop"
version = "0.1.0"
description = "Qingpan AI storage firewall for macOS"
authors = ["Qingpan"]
edition = "2021"

[lib]
name = "qingpan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hostname = "0.4"
keyring = "3"
libc = "0.2"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
walkdir = "2"
